@@ -8,9 +8,8 @@ build_requires 'Test::More';
 
 requires 'Geometry::Primitive' => '0.16';
 requires 'Graphics::Color' => '0.20';
-requires 'Moose' => '0.79';
+requires 'Moose' => '0.90';
 requires 'MooseX::Clone' => '0.04';
-requires 'MooseX::AttributeHelpers' => '0.17';
 requires 'MooseX::Storage' => '0.17';
 requires 'Forest' => '0.06';
 requires 'JSON::Any' => '1.22';
